add_executable(ch01-01 ch01-01.cpp)
#add_executable(ch01-02 ch01-02.cpp)
#add_executable(ch01-03 ch01-03.cpp)
add_executable(ch01-04 ch01-04.cpp)
#add_executable(ch01-05 ch01-05.cpp)
add_executable(ch01-06 ch01-06.cpp)
#add_executable(ch01-07 ch01-07.cpp)
add_executable(ch01-08 ch01-08.cpp)
add_executable(ch01-09 ch01-09.cpp)
add_executable(ch01-10 ch01-10.cpp)
add_executable(ch01-11 ch01-11.cpp)
add_executable(ch01-12 ch01-12.cpp)
add_executable(ch01-13 ch01-13.cpp)
add_executable(ch01-14 ch01-14.cpp)
add_executable(ch01-15 ch01-15.cpp)
add_executable(ch01-16 ch01-16.cpp)
add_executable(ch01-17 ch01-17.cpp)
add_executable(ch01-18 ch01-18.cpp)
add_executable(ch01-21 ch01-21.cpp)
add_executable(ch01-22 ch01-22.cpp)
add_executable(ch01-23 ch01-23.cpp)
add_executable(ch01-24 ch01-24.cpp)
add_executable(ch01-25 ch01-25.cpp)
add_executable(ch01-26 ch01-26.cpp)
add_executable(ch01-27 ch01-27.cpp)
