add_executable(ch02-01 ch02-01.cpp)
add_executable(ch02-02 ch02-02.cpp)
add_executable(ch02-03 ch02-03.cpp)
add_executable(ch02-04 ch02-04.cpp)
add_executable(ch02-05 ch02-05.cpp)
add_executable(ch02-06 ch02-06.cpp)
add_executable(ch02-07 ch02-07.cpp)
add_executable(ch02-08 ch02-08.cpp)
add_executable(ch02-09 ch02-09.cpp)
