add_executable(ch04-01 ch04-01.cpp)
add_executable(ch04-02 ch04-02.cpp)
add_executable(ch04-03 ch04-03.cpp)
add_executable(ch04-04 ch04-04.cpp)
add_executable(ch04-05 ch04-05.cpp)
add_executable(ch04-06 ch04-06.cpp)
add_executable(ch04-07 ch04-07.cpp)
add_executable(ch04-09 ch04-09.cpp)
add_executable(ch04-10 ch04-10.cpp)
add_executable(ch04-11 ch04-11.cpp)
add_executable(ch04-12 ch04-12.cpp)
add_executable(ch04-13 ch04-13.cpp)
add_executable(ch04-14 ch04-14.cpp)
add_executable(ch04-15 ch04-15.cpp)
add_executable(ch04-16 ch04-16.cpp)
add_executable(ch04-17 ch04-17.cpp)
add_executable(ch04-18 ch04-18.cpp)
add_executable(ch04-19 ch04-19.cpp)
add_executable(ch04-20 ch04-20.cpp)
add_executable(ch04-21 ch04-21.cpp)
add_executable(ch04-22 ch04-22.cpp)
add_executable(ch04-23 ch04-23.cpp)
