add_executable(ch05-14 ch05-14.cpp)
add_executable(ch05-13 ch05-13.cpp)
add_executable(ch05-12 ch05-12.cpp)
add_executable(ch05-11 ch05-11.cpp)
add_executable(ch05-10 ch05-10.cpp)
add_executable(ch05-09 ch05-09.cpp)
add_executable(ch05-08 ch05-08.cpp)
add_executable(ch05-07 ch05-07.cpp)
#add_executable(ch05-06 ch05-06.cpp)
add_executable(ch05-05 ch05-05.cpp)
add_executable(ch05-04 ch05-04.cpp)
add_executable(ch05-03 ch05-03.cpp)
add_executable(ch05-02 ch05-02.cpp)
add_executable(ch05-01 ch05-01.cpp)
