add_executable(ch06-26 ch06-26.cpp)
add_executable(ch06-25 ch06-25.cpp)
add_executable(ch06-24 ch06-24.cpp)
add_executable(ch06-23 ch06-23.cpp)
add_executable(ch06-22 ch06-22.cpp)
add_executable(ch06-21 ch06-21.cpp)
add_executable(ch06-20 ch06-20.cpp)
add_executable(ch06-19 ch06-19.cpp)
add_executable(ch06-18 ch06-18.cpp)
add_executable(ch06-17 ch06-17.cpp)
add_executable(ch06-16 ch06-16.cpp)
add_executable(ch06-15 ch06-15.cpp)
add_executable(ch06-14 ch06-14.cpp)
add_executable(ch06-13 ch06-13.cpp)
add_executable(ch06-12 ch06-12.cpp)
add_executable(ch06-11 ch06-11.cpp)
add_executable(ch06-10 ch06-10.cpp)
add_executable(ch06-09 ch06-09.cpp)
add_executable(ch06-08 ch06-08.cpp)
add_executable(ch06-07 ch06-07.cpp)
add_executable(ch06-06 ch06-06.cpp)
add_executable(ch06-05 ch06-05.cpp)
add_executable(ch06-04 ch06-04.cpp)
add_executable(ch06-03 ch06-03.cpp)
add_executable(ch06-02 ch06-02.cpp)
add_executable(ch06-01 ch06-01.cpp)
