add_executable(ch07-21 ch07-21.cpp)
add_executable(ch07-20 ch07-20.cpp)
#add_executable(ch07-19 ch07-19.cpp)
add_executable(ch07-18 ch07-18.cpp)
add_executable(ch07-17 ch07-17.cpp)
add_executable(ch07-16 ch07-16.cpp)
add_executable(ch07-15 ch07-15.cpp)
add_executable(ch07-14 ch07-14.cpp)
add_executable(ch07-13 ch07-13.cpp)
add_executable(ch07-12 ch07-12.cpp)
add_executable(ch07-11 ch07-11.cpp)
add_executable(ch07-10 ch07-10.cpp)
add_executable(ch07-09 ch07-09.cpp)
add_executable(ch07-08 ch07-08.cpp)
add_executable(ch07-07 ch07-07.cpp)
add_executable(ch07-06 ch07-06.cpp)
add_executable(ch07-05 ch07-05.cpp)
add_executable(ch07-04 ch07-04.cpp)
add_executable(ch07-03 ch07-03.cpp)
add_executable(ch07-02 ch07-02.cpp)
add_executable(ch07-01 ch07-01.cpp)
