add_executable(ch09-22 ch09-22.cpp)
add_executable(ch09-21 ch09-21.cpp)
add_executable(ch09-20 ch09-20.cpp)
add_executable(ch09-19 ch09-19.cpp)
#add_executable(ch09-18 ch09-18.cpp)
add_executable(ch09-17 ch09-17.cpp)
add_executable(ch09-16 ch09-16.cpp)
add_executable(ch09-15 ch09-15.cpp)
add_executable(ch09-14 ch09-14.cpp)
add_executable(ch09-13 ch09-13.cpp)
add_executable(ch09-12 ch09-12.cpp)
add_executable(ch09-11 ch09-11.cpp)
add_executable(ch09-10 ch09-10.cpp)
add_executable(ch09-09 ch09-09.cpp)
add_executable(ch09-08 ch09-08.cpp)
add_executable(ch09-07 ch09-07.cpp)
add_executable(ch09-06 ch09-06.cpp)
add_executable(ch09-05 ch09-05.cpp)
add_executable(ch09-04 ch09-04.cpp)
add_executable(ch09-03 ch09-03.cpp)
add_executable(ch09-02 ch09-02.cpp)
add_executable(ch09-01 ch09-01.cpp)
