add_executable(ch10-13 ch10-13.cpp)
add_executable(ch10-12 ch10-12.cpp)
add_executable(ch10-11 ch10-11.cpp)
add_executable(ch10-10 ch10-10.cpp)
add_executable(ch10-09 ch10-09.cpp)
add_executable(ch10-08 ch10-08.cpp)
add_executable(ch10-07 ch10-07.cpp)
add_executable(ch10-06 ch10-06.cpp)
add_executable(ch10-05 ch10-05.cpp)
add_executable(ch10-04 ch10-04.cpp)
add_executable(ch10-03 ch10-03.cpp)
#add_executable(ch10-02 ch10-02.cpp)
add_executable(ch10-01 ch10-01.cpp)
