add_executable(ch12-11 ch12-11.cpp)
add_executable(ch12-10 ch12-10.cpp)
add_executable(ch12-09 ch12-09.cpp)
add_executable(ch12-08 ch12-08.cpp)
add_executable(ch12-07 ch12-07.cpp)
add_executable(ch12-06 ch12-06.cpp)
add_executable(ch12-05 ch12-05.cpp)
add_executable(ch12-04 ch12-04.cpp)
add_executable(ch12-03 ch12-03.cpp)
add_executable(ch12-02 ch12-02.cpp)
add_executable(ch12-01 ch12-01.cpp)
