add_executable(ch08-24 ch08-24.cpp)
add_executable(ch08-23 ch08-23.cpp)
add_executable(ch08-22 ch08-22.cpp)
add_executable(ch08-21 ch08-21.cpp)
add_executable(ch08-20 ch08-20.cpp)
add_executable(ch08-19 ch08-19.cpp)
add_executable(ch08-18 ch08-18.cpp)
add_executable(ch08-17 ch08-17.cpp)
add_executable(ch08-16 ch08-16.cpp)
add_executable(ch08-15 ch08-15.cpp)
add_executable(ch08-14 ch08-14.cpp)
add_executable(ch08-13 ch08-13.cpp)
add_executable(ch08-12 ch08-12.cpp)
add_executable(ch08-11 ch08-11.cpp)
add_executable(ch08-10 ch08-10.cpp)
add_executable(ch08-09 ch08-09.cpp)
add_executable(ch08-08 ch08-08.cpp)
add_executable(ch08-07 ch08-07.cpp)
add_executable(ch08-06 ch08-06.cpp)
add_executable(ch08-05 ch08-05.cpp)
add_executable(ch08-04 ch08-04.cpp)
add_executable(ch08-03 ch08-03.cpp)
add_executable(ch08-02 ch08-02.cpp)
add_executable(ch08-01 ch08-01.cpp)
