add_executable(ch08-40 ch08-40.cpp)
add_executable(ch08-39 ch08-39.cpp)
add_executable(ch08-38 ch08-38.cpp)
add_executable(ch08-37 ch08-37.cpp)
add_executable(ch08-36 ch08-36.cpp)
add_executable(ch08-35 ch08-35.cpp)
add_executable(ch08-34 ch08-34.cpp)
add_executable(ch08-33 ch08-33.cpp)
add_executable(ch08-32 ch08-32.cpp)
add_executable(ch08-31 ch08-31.cpp)
add_executable(ch08-30 ch08-30.cpp)
add_executable(ch08-29 ch08-29.cpp)
add_executable(ch08-28 ch08-28.cpp)
add_executable(ch08-27 ch08-27.cpp)
add_executable(ch08-26 ch08-26.cpp)
add_executable(ch08-25 ch08-25.cpp)
