add_executable(ch08-55 ch08-55.cpp)
add_executable(ch08-54 ch08-54.cpp)
add_executable(ch08-53 ch08-53.cpp)
add_executable(ch08-52 ch08-52.cpp)
add_executable(ch08-51 ch08-51.cpp)
add_executable(ch08-50 ch08-50.cpp)
add_executable(ch08-49 ch08-49.cpp)
add_executable(ch08-48 ch08-48.cpp)
add_executable(ch08-47 ch08-47.cpp)
