add_executable(ch08-65 ch08-65.cpp)
add_executable(ch08-64 ch08-64.cpp)
add_executable(ch08-63 ch08-63.cpp)
add_executable(ch08-62 ch08-62.cpp)
add_executable(ch08-61 ch08-61.cpp)
add_executable(ch08-60 ch08-60.cpp)
add_executable(ch08-59 ch08-59.cpp)
add_executable(ch08-58 ch08-58.cpp)
add_executable(ch08-57 ch08-57.cpp)
add_executable(ch08-56 ch08-56.cpp)
