add_executable(ch08-75 ch08-75.cpp)
add_executable(ch08-74 ch08-74.cpp)
add_executable(ch08-73 ch08-73.cpp)
add_executable(ch08-72 ch08-72.cpp)
add_executable(ch08-71 ch08-71.cpp)
add_executable(ch08-70 ch08-70.cpp)
add_executable(ch08-69 ch08-69.cpp)
add_executable(ch08-68 ch08-68.cpp)
add_executable(ch08-67 ch08-67.cpp)
add_executable(ch08-66 ch08-66.cpp)
